gccida/g0/recog_15
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15574:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1 = ( rtx)x0[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15590:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x4; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15591:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4a = ( rtx)x3[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15597:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3a = ( rtx)x2k[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15600:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( x3a->fld[0].rtx, recog_data_0.operand[1]) ) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15602:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4b = ( rtx)x3a[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15608:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2l = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15617:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x4c; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15618:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4d = ( rtx)x3b[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15624:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3c = ( rtx)x2l[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15627:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( x3c->fld[0].rtx, recog_data_0.operand[2]) ) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15629:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4e = ( rtx)x3c[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15664:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x4f; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15665:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4g = ( rtx)x3d[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15671:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3e = ( rtx)x2k[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15674:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( x3e->fld[0].rtx, recog_data_0.operand[1]) ) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15676:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4h = ( rtx)x3e[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15682:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2m = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/insn-recog.c:15694:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x4l; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_15/src/obj/insn-recog.o] Error 1
